--- a/Project1_react_Java/src/main/resources/application.properties
+++ b/Project1_react_Java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server port 9002;
+server.port=9002
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/project1_react
